feat(ExMarioKart): Primeira parte dos exercícios

--- a/modulo-05/ExMarioKart/ExMarioKart/ExMarioKart.csproj
+++ b/modulo-05/ExMarioKart/ExMarioKart/ExMarioKart.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Corredor.cs" />
+    <Compile Include="PneusdeCourodeDragão.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
