feat(Sonnar, Light, Dinam): Acrescentar 3 novos tipos de karts com bonificações prórpias para velocidade total do Kart.

--- a/modulo-05/ExMarioKart/ExMarioKart/ExMarioKart.csproj
+++ b/modulo-05/ExMarioKart/ExMarioKart/ExMarioKart.csproj
@@ -41,10 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Corredor.cs" />
-    <Compile Include="IEquipamento.cs" />
-    <Compile Include="Kart.cs" />
-    <Compile Include="MotorABaseDeLava.cs" />
-    <Compile Include="PneusDeCouroDeDragão.cs" />
+    <Compile Include="Equipamentos\IEquipamento.cs" />
+    <Compile Include="Karts\Dinam.cs" />
+    <Compile Include="Karts\Kart.cs" />
+    <Compile Include="Equipamentos\MotorABaseDeLava.cs" />
+    <Compile Include="Equipamentos\PneusDeCouroDeDragão.cs" />
+    <Compile Include="Karts\Light.cs" />
+    <Compile Include="Karts\Sonnar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
