feat(SkyFusion): adicionar um Kart que pode ser utilizado como equipamento

--- a/modulo-05/ExMarioKart/ExMarioKart/ExMarioKart.csproj
+++ b/modulo-05/ExMarioKart/ExMarioKart/ExMarioKart.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Equipamentos\MotorABaseDeLava.cs" />
     <Compile Include="Equipamentos\PneusDeCouroDeDragão.cs" />
     <Compile Include="Karts\Light.cs" />
+    <Compile Include="Karts\SkyFusion.cs" />
     <Compile Include="Karts\Sonnar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
