feat(Personagem): CÓDIGO INCOMPLETO

--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
@@ -149,6 +149,16 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StreetFighter.Aplicativo\StreetFighter.Aplicativo.csproj">
+      <Project>{f07b1ea6-f21e-4f2d-8402-804ea8cf44f3}</Project>
+      <Name>StreetFighter.Aplicativo</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StreetFighter.Dominio\StreetFighter.Dominio.csproj">
+      <Project>{68c32c51-754c-4c1d-a3d8-a1dad7f5a5f4}</Project>
+      <Name>StreetFighter.Dominio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
