--- a/modulo-05/StreetFighter.Web/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPersonagemRepositorio.cs" />
     <Compile Include="PersonagemRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
