feat(StreetFighter Project c/ DB): CÓDIGO INCOMPLETO

--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/Web.config
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/Web.config
@@ -46,4 +46,7 @@
       <remove name="ApplicationInsightsWebTracking"/>
     </modules>
   </system.webServer>
+  <connectionStrings>
+    <add name="StreetFighterConnection" connectionString="Server=NB-002679\SQLEXPRESS;Database=StreetFighter;UserId=crescer;Password=crescer;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
