feat(Ent. Framework): CÓDIGO INCOMPLETO

--- a/modulo-05/StreetFighter.Web/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Repositorio/StreetFighter.Repositorio.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Transactions" />
@@ -51,6 +52,9 @@
       <Project>{68c32c51-754c-4c1d-a3d8-a1dad7f5a5f4}</Project>
       <Name>StreetFighter.Dominio</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
