feat(Loja): criar site Loja com login e listagem de produtos com conexões à DB

--- a/modulo-05/Loja/Loja.Repositorio/Loja.Repositorio.csproj
+++ b/modulo-05/Loja/Loja.Repositorio/Loja.Repositorio.csproj
@@ -50,11 +50,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContextoDeDados.cs" />
-    <Compile Include="Migrations\201611091620220_Initial.cs" />
-    <Compile Include="Migrations\201611091620220_Initial.Designer.cs">
-      <DependentUpon>201611091620220_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201611091713361_initial.cs" />
+    <Compile Include="Migrations\201611091713361_initial.Designer.cs">
+      <DependentUpon>201611091713361_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201611091809285_adicionandoProduto.cs" />
+    <Compile Include="Migrations\201611091809285_adicionandoProduto.Designer.cs">
+      <DependentUpon>201611091809285_adicionandoProduto.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ProdutoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
@@ -69,8 +74,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201611091620220_Initial.resx">
-      <DependentUpon>201611091620220_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201611091713361_initial.resx">
+      <DependentUpon>201611091713361_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611091809285_adicionandoProduto.resx">
+      <DependentUpon>201611091809285_adicionandoProduto.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
