--- a/modulo-05/Loja/Loja.Web/Web.config
+++ b/modulo-05/Loja/Loja.Web/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Loja" connectionString="Server=DESKTOP-CH2CPDC\SQLEXPRESS;Database=loja;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="Loja" connectionString="Server=NB-002679\SQLEXPRESS;Database=Loja;User id=sa;Password=sa12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
