--- a/modulo-05/Loja/Loja.Web/Loja.Web.csproj
+++ b/modulo-05/Loja/Loja.Web/Loja.Web.csproj
@@ -162,6 +162,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ListaProdutosModel.cs" />
+    <Compile Include="Models\ProdutoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Servicos\ServicoDeDependencias.cs" />
   </ItemGroup>
