feat(Exemplos): manipulação de arquivos e conexão com db

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ bld/
 [Bb]uild[Ll]og.*
 /modulo-09/aula1/target/
 /modulo-09/Lista1Exercicios/target/
+/modulo-09/aula2/target/
+/modulo-09/ListasExercicios/target/
