--- a/modulo-09/aula2/pom.xml
+++ b/modulo-09/aula2/pom.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>br.com.cwi.crescer</groupId>
-    <artifactId>Lista1Exercicios</artifactId>
-    <version>1.0</version>
+    <groupId>br.com.cwi.crecer</groupId>
+    <artifactId>aula2</artifactId>
+    <version>1.0.0.0</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>br.com.cwi.crescer</groupId>
+            <artifactId>ListasExercicios</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+	<groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
+        </dependency>
+    </dependencies>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
