feat(Spring): projeto de exemplo Spring e SpringData

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ bld/
 /modulo-09/ListasExercicios/target/
 /modulo-09/aula5-exercicios/target/
 /src/modulo-09-java/aula5/target/
+/modulo-09/aula8/target/
