feat(Entidades): acrescentar entidades com mapeamento de persistencia.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ bld/
 /modulo-09/aula5-exercicios/target/
 /src/modulo-09-java/aula5/target/
 /modulo-09/aula8/target/
+/modulo-09/aula5-spring-version/target/
